Invoice.TOTAL_SUBQUERY renamed to CALCULATED_TOTAL